--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,14 @@ name: Image-Build
 on:
   push:
     branches: ["main"]
-    pull_request: ["main"]
+   pull_request: 
+    branches: ["main"]  
 
   jobs:
+
     build:
+
+
       runs-on: ubuntu-latest
 
       steps:
