--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
         "container": "docker run -p 49160:8080 -d test-image"
     },
     "dependencies": {
-        "eslint": "^8.29.0",
         "express": "^4.16.1",
         "prettier": "^2.8.1"
+    },
+    "devDependencies": {
+        "eslint": "^8.29.0"
     }
 }
