--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "container": "docker run -p 49160:8080 -d test-image"
     },
     "dependencies": {
-        "express": "^4.16.1",
-        "prettier": "^2.8.1"
+        "express": "^4.16.1"
     },
     "devDependencies": {
         "eslint": "^8.29.0"
